--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Project</title>
+  <link rel="stylesheet" href="style.css">
+  <title>New Title</title>
 </head>
 
 <body>
   <h1>My Project</h1>
+
+  <h2>Page Description</h2>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit sunt dolorum quia repellendus dolore quidem porro
+    laudantium blanditiis rerum numquam autem pariatur eos architecto praesentium perferendis, libero vero aspernatur
+    placeat labore consequatur mollitia assumenda, incidunt commodi. Nesciunt, modi. Nostrum ex, ratione deleniti eum
+    perspiciatis suscipit labore placeat enim delectus vel.</p>
 </body>
 
 </html>
