added content to desc

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
   <h1>My Project</h1>
 
   <h2>Page Description</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit sunt dolorum quia repellendus dolore quidem porro
-    laudantium blanditiis rerum numquam autem pariatur eos architecto praesentium perferendis, libero vero aspernatur
-    placeat labore consequatur mollitia assumenda, incidunt commodi. Nesciunt, modi. Nostrum ex, ratione deleniti eum
-    perspiciatis suscipit labore placeat enim delectus vel.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi minima sunt repellat, nisi ipsum nulla sapiente
+    minus eum, error molestias vitae inventore maxime aliquam vero beatae veritatis doloribus odio. Temporibus laborum
+    ut iusto numquam consectetur sint tempore. Sunt laboriosam maxime rerum eaque, facere voluptas dolorem eos minus
+    incidunt itaque illum quos quae eligendi repellat cupiditate necessitatibus quaerat libero unde magni magnam sed ea,
+    molestiae, corporis in. Corporis eveniet cum nesciunt dignissimos numquam distinctio veniam ea, provident minima.
+    Ipsum ex rem nam cupiditate. Exercitationem, nulla temporibus laboriosam illum accusantium ea labore, eum earum
+    autem unde maiores dignissimos amet ad quae? Corrupti alias soluta deserunt modi eligendi autem error itaque,
+    asperiores nostrum ex ratione? Delectus temporibus libero et repellendus possimus esse consectetur est. Debitis ut
+    animi aliquid odio dolore? Aliquam tenetur laborum culpa iste sed fuga odio optio, modi reiciendis nobis dolores ab
+    nesciunt maiores ipsam ratione beatae ipsum dolore rerum reprehenderit.</p>
 </body>
 
 </html>
